--- a/css/temp.css
+++ b/css/temp.css
@@ -1,39 +1,4 @@
-.carousel { height: calc(100vh - 230px);top: 0;position: relative;}
-.carousel-inner,.carousel-item { height: 100%;}
-.carousel-item { background-color: #000;}
-.carousel-item img { height: 100%; object-fit: cover; object-position: center;opacity: .6;}
-.carousel-caption {width: 100%;left: 0;}
-.nav-item a:hover{ background-color: rgba(104, 212, 231, 0.13)}
-.navbar {position: absolute;top: 30px;z-index: 10;width: 100%;}
-									/*GET STARTED*/
-.button {
-    text-align: center;text-transform: uppercase;cursor: pointer;font-size: 20px;letter-spacing: 4px;
-    position: relative;background-color: #25e1e7;border: none;color: #fff;padding: 20px;width: 230px;
-    text-align: center;transition-duration: 0.4s;overflow: hidden;box-shadow: 0 5px 15px #193047;border-radius: 4px;
-  }
-.button:hover {
-    background: #fff;box-shadow: 0px 2px 10px 5px #1ccce4;color: #000;
-  }
-.button:after {content: "";background: #1abc9c;display: block;position: absolute;
-    padding-top: 300%;padding-left: 350%;margin-left: -20px !important;margin-top: -120%;
-    opacity: 0;transition: all 0.8s
-  }
-.button:active:after {padding: 0;margin: 0;opacity: 1;transition: 0s
-  }
-.button:focus { outline:0; }
-  .text-center {margin-top: 20px;}
-									/*Video*/
-header {position: relative;background-color: black;height: 30vh;min-height: 25rem;width: 100%;overflow: hidden;}
-header img {position: absolute;top: 50%;left: 50%;min-width: 100%;min-height: 100%;width: auto;height: auto;z-index: 0;-ms-transform: translateX(-50%) translateY(-50%);-moz-transform: translateX(-50%) translateY(-50%);-webkit-transform: translateX(-50%) translateY(-50%);transform: translateX(-50%) translateY(-50%);}
-header .container {position: relative;z-index: 2;}
-header .overlay {position: absolute;top: 0;top: 0;left: 0;height: 100%;width: 100%;background-color: black;opacity: 0.5;z-index: 1;}
-@media (pointer: coarse) and (hover: none) {
-    header {background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;}
-    header video {display: none;}}
-                  /*NEWS*/
-.news-feed {margin-bottom: 30px;}
-
-                  /*Footer*/
+/*Footer*/
 .footer-bs {background-color: #272626;padding: 60px 40px;color: rgba(255,255,255,1.00);
     margin-bottom: 20px;border-bottom-right-radius: 6px;border-top-left-radius: 0px;
     border-bottom-left-radius: 6px;
@@ -65,8 +30,44 @@ header .overlay {position: absolute;top: 0;top: 0;left: 0;height: 100%;width: 10
     .footer-bs .footer-ns a { color:rgba(255,255,255,1.00);}
     .footer-bs .footer-ns a:hover { color:rgba(255,255,255,0.80); text-decoration:none; }
     #footer{padding-left: 170px;}
+
     footer{position: relative;bottom: 0;}
-    /*resposive footer*/
+
+@media (max-height:800px){footer { position: static; }header { padding-top:40px; }}
+.footer-distributed{background-color: #2c292f;box-sizing: border-box;width: 100%;
+	text-align: left;font: bold 16px sans-serif;padding: 50px 50px 60px 50px;margin-top: 80px;}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{display: inline-block;vertical-align: top;}
+
+/* Footer left */
+.footer-distributed .footer-left{width: 30%;}
+.footer-distributed .footer-right h3{color:  #ffffff;font: normal 36px 'Cookie', cursive;margin: 0;}
+
+/* The company logo */
+.footer-distributed .footer-left img{width: 30%;}
+.footer-distributed h3 span{color:  #e0ac1c;}
+/* Footer links */
+.footer-distributed .footer-links{color:  #ffffff;margin: 20px 0 12px;}
+.footer-distributed .footer-links a{display:inline-block;line-height: 1.8;text-decoration: none;color:  inherit;}
+.footer-distributed .footer-company-name{color:  #8f9296;font-size: 14px;font-weight: normal;margin: 0;}
+/* Footer Center */
+.footer-distributed .footer-center{width: 35%;}
+.footer-distributed .footer-center p a{color:  #e0ac1c;text-decoration: none;;}
+/* Footer Right */
+
+.footer-distributed .footer-right{width: 30%;}
+
+.footer-distributed .footer-company-about{line-height: 20px;color:  #92999f;
+	font-size: 13px;font-weight: normal;margin: 0;}
+.footer-distributed .footer-company-about span{display: block;color:  #ffffff;font-size: 18px;
+font-weight: bold;margin-bottom: 20px;}
+.footer-distributed .footer-icons{margin-top: 25px;}
+.footer-distributed .footer-icons a{display: inline-block;width: 35px;height: 35px;cursor: pointer;
+	background-color:  #33383b00;border-radius: 2px;font-size: 20px;color: #ffffff;text-align: center;
+	line-height: 35px;margin-right: 3px;margin-bottom: 5px;}
+/*resposive footer*/
 @media (max-width: 880px) {.footer-distributed .footer-left,.footer-distributed .footer-center,.footer-distributed .footer-right
 	{
 		display: block;
