--- a/app/static/css/recommender.css
+++ b/app/static/css/recommender.css
@@ -6,6 +6,10 @@
 .R21 input{background-color:transparent;border:2px solid black;width:100%;max-width: 300px;}
 .R3{background-color:#06ff82;display:flex;flex-direction:column;min-height:500px;}
 .R3 h3{font-size: 30px;font-family: 'Times New Roman', Times, serif;font-weight: bold;}
+.R4{background-color:#06ff82;min-height:300px;}
 .card h6{font-family: 'Times New Roman', Times, serif;text-align: center;font-weight: bold}
 .card p{color:rgb(0, 0, 0);font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
 .R3 .card .card-header{background-color:#01FF70}
+.buttonload .fa-spin{
+	margin-right:10px;
+}
