--- a/app/templates/recommender.html
+++ b/app/templates/recommender.html
@@ -13,8 +13,18 @@
 <div class="R1">
 <h1>RECOMMENDER</h1>
 </div>
+<div class="R4 text-center">
+    <h3 class="pt-5">These are the recommended courses for you</h3>
+    <h4 class="py-1">Congratulations</h4>
+        <ul class="list-group list-group-horizontal-sm justify-content-center">
+            <li class="list-group-item list-group-item-primary active">{{RH[0]}}  <span class="badge badge-warning badge-pill">1</span></li>
+            <li class="list-group-item list-group-item-secondary">{{RH[1]}}  <span class="badge badge-primary badge-pill">2</span></li>
+            <li class="list-group-item">{{RH[2]}}  <span class="badge badge-success badge-pill">3</span></li>
+            <li class="list-group-item">{{RH[3]}}  <span class="badge badge-danger badge-pill">4</span></li>
+        </ul>
+</div>
 <div class="R3 text-center" >
-    <h3 class="pt-5">Here are our top 5 recommendations</h3>
+    <h3 class="pt-5">Here are our top 5 recommended Udemy courses for you</h3>
     <div class="container-fluid pt-5">
         <div class="card-deck" style="justify-content:center">
             <div class="card mb-2">
